--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -69,6 +69,11 @@
       <% if (!index && theme.share_jia){ %>
         <%- partial('post/share') %>
       <% } %>
+      <% if ( !index ){ %>
+        <span class="archive-article-date">
+          阅读量 <span id="busuanzi_value_page_pv"></span>
+        </span>
+      <% } %>
       <div class="clearfix"></div>
     </div>
   </div>
