--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,6 +7,15 @@
       	<div class="footer-right">
       		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
       	</div>
-    </div>
+		</div>
+		<div calss="count-span">
+			<span id="busuanzi_container_site_pv">
+				被浏览<span id="busuanzi_value_site_pv"></span>次 |
+			</span>
+			<span id="busuanzi_container_site_uv">
+				<span id="busuanzi_value_site_uv"></span>人浏览
+			</span>
+		</div>
   </div>
 </footer>
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
